...

    <item android:title="Home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home"/>
    <item android:title="Map"
        android:icon="@drawable/ic_baseline_location_24"
        android:id="@+id/map"/>
    <item android:title="Add"
        android:icon="@drawable/ic_baseline_add_24"
        android:id="@+id/add"/>
    <item android:title="History"
        android:icon="@drawable/ic_baseline_history_24"
        android:id="@+id/history"/>
...
