...
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#F8B64C"
...
