...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/flair_background"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="Happy"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle" />

            <TextView
...
